# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.13 2004/12/17 06:13:43 agaffney Exp $

*GLI-0.01 (9 Feb 2004)

  17 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
  Switched to using dumpe2fs to determine free space left in ext2/3 filesystem in
  GLIStorageDevice at the suggestion of plors

  10 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
  Added a function to GLIUtility to pull a value from a make.conf-style config
  file. Minor type fix to GLIInstallProfile.py

  09 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
  Added code in GLIArchitectureTemplate.py to write netmounts into fstab. Separated
  network mounts from partition data structure in GLIInstallProfile

  27 Nov 2004; Andrew Gaffney <agaffney@gentoo.org>
  Changed the way GLIStorageDevice.py determines the amount a ext2/3 filesystem
  can be resized.

  27 Oct 2004; Preston Cody <codeman@gentoo.org>
  Added some of the final functions to GLIInstallTemplate.
  Yes this project is still active despite rare use of the Changelog!

  11 Jun 2004; Nathaniel McCallum <npmccallum@gentoo.org>
  Added the GLIPartitionTools.py file.  This is a temporary insertion of 
  partitioning tools that will eventually go into their own package.

  27 Mar 2004; Nathaniel McCallum <npmccallum@gentoo.org>
  Added InstallProfileTODO.txt.  Added GLIClientConfiguration.py (contains run-time
  for the program).  Added __init__(install_profile, client_configuration) to 
  GLI.InstallProfile.  This sets install_profile and client_configuration once so as
  to avoid constantly passing stuff every time we call a method.

  26 Mar 2004; Nathaniel McCallum <npmccallum@gentoo.org>

  Added another private method to GLI.InstallTemplate.  _edit_config() modifies config
  files without messing up all the other stuff in them.  This will be used for making
  changes to make.conf, rc.conf, /etc/conf.d/net, etc...
