@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.13 2004/12/17 06:13:43 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.14 2004/12/20 00:13:46 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  19 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
+  Added get_extended_partition() to GLIStorageDevice.
 
   17 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
   Switched to using dumpe2fs to determine free space left in ext2/3 filesystem in
